# sort_dataset

./: CMakeLists.txt  README.md  sort.cpp
Qi/ilsvrc12/: get_ilsvrc_aux.sh
Qi/imagenet/: create_imagenet.sh  make_imagenet_mean.sh
helper/: create_lists.py  simple_test_lists.py
